syntax = "proto3";

package ai.stigmer.agentic.workflow.v1;

import "buf/validate/validate.proto";

// WorkflowId wraps a workflow identifier.
message WorkflowId {
  string value = 1 [(buf.validate.field).required = true];
}
